# 21

./: catalog_data.json  data.json  pyproject.toml
catalog/: .env.sample  admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_blog_alter_product_options.py  0003_alter_blog_slug.py  0004_blog_views_count.py  0005_alter_blog_slug.py  0006_alter_blog_slug.py  0007_alter_blog_slug.py  0008_alter_blog_content_alter_blog_slug.py  0009_version.py  0010_product_user.py  0011_product_is_published.py
catalog/templates/catalog/: base.html  blog.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_form_with_formset.html  product_list.html  take_contact.html  take_homepage.html  test.html
catalog/templates/catalog/includes/: inc_blog_card.html  inc_category_card.html  inc_menu.html  inc_product_card.html
project/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: backup_pass.html  login.html  user_form.html
